@@ -11,11 +11,11 @@
 <H3>Appendices</H3>
 
 <UL>
-  <LI><A HREF="bugreporting.html">Reporting bugs</A> in pgAdmin III.<BR>&bnsp;</LI>
-  <LI>The pgAdmin <A HREF="team.html">development team</A>.<BR>&bnsp;</LI>
-  <LI>The pgAdmin <A HREF="translation_team.html">translation team</A>.<BR>&bnsp;</LI>
-  <LI>The pgAdmin III <A HREF="licence.html">licence</A>.<BR>&bnsp;</LI>
-  <LI>The OpenSSL <A HREF="openssl.html">licence</A>.<BR>&bnsp;</LI>
+  <LI><A HREF="bugreporting.html">Reporting bugs</A> in pgAdmin III.<BR>&nbsp;</LI>
+  <LI>The pgAdmin <A HREF="team.html">development team</A>.<BR>&nbsp;</LI>
+  <LI>The pgAdmin <A HREF="translation_team.html">translation team</A>.<BR>&nbsp;</LI>
+  <LI>The pgAdmin III <A HREF="licence.html">licence</A>.<BR>&nbsp;</LI>
+  <LI>The OpenSSL <A HREF="openssl.html">licence</A>.<BR>&nbsp;</LI>
 </UL>
 </BODY>
 </HTML>
