@@ -24,10 +24,10 @@ cross platform toolkit. Connection to PostgreSQL is made using the
 native libpq library.</P>
 
 <UL>
-  <LI><A HREF="using.html">Using pgAdmin III</A><BR>&bnsp;</LI>
-  <LI><A HREF="pgagent.html">pgAgent</A> - a job scheduler for PostgreSQL.<BR>&bnsp;</LI>
-  <LI><A HREF="extend.html">Extended features</A> - a contrib module for PostgreSQL to extend pgAdmin's functionality.<BR>&bnsp;</LI>
-  <LI><A HREF="appendices.html">Appendices</A> - bug reporting, licence info etc.<BR>&bnsp;</LI>
+  <LI><A HREF="using.html">Using pgAdmin III</A><BR>&nbsp;</LI>
+  <LI><A HREF="pgagent.html">pgAgent</A> - a job scheduler for PostgreSQL.<BR>&nbsp;</LI>
+  <LI><A HREF="extend.html">Extended features</A> - a contrib module for PostgreSQL to extend pgAdmin's functionality.<BR>&nbsp;</LI>
+  <LI><A HREF="appendices.html">Appendices</A> - bug reporting, licence info etc.<BR>&nbsp;</LI>
 </UL>
 </BODY>
 </HTML>
