@@ -18,9 +18,9 @@ at a particular host, or left for execution by any host. Locking prevents
 execution of the same instance of a job by multiple hosts.</P>
 
 <H3>Database setup</H3>
-<P>pgAgent can store it's configuration in any database in your cluster. To 
-setup a dedicated database for this purpose, create a new database using 
-pgAdmin called 'pgadmin' (or any other name if you prefer). The database
+<P>pgAgent stores it's configuration in the &quot;postgres&quot; database in your cluster. This 
+database exists by default in PostgreSQL 8.1 versions, for earlier versions
+you need to create the database yourself. The database
 must have the pl/pgsql procedural language installed - PostgreSQL's 
 'createlang' program can do this if required.</P>
 
@@ -28,8 +28,9 @@ must have the pl/pgsql procedural language installed - PostgreSQL's
 Select the File -> Open option from the menu and find the 'pgagent.sql' 
 script installed with pgAdmin. The installation location for this file 
 varies from operating system to operating system, however it will normally 
-be found under 'C:\Program files\pgAdmin III' on Windows systems, or 
-'/usr/local/pgadmin3/share/pgadmin3' or '/usr/share/pgadmin3' on *nix 
+be found under 'C:\Program files\pgAdmin III' on Windows systems (or 
+'C:\Program files\PostgreSQL\8.x\pgAdmin III' if installed with the PostgreSQL server installer),
+or '/usr/local/pgadmin3/share/pgadmin3' or '/usr/share/pgadmin3' on *nix 
 systems. Once the file is loaded, click the 'Run' button to execute the script.</P>
 
 <P>The script will create a number of tables and other objects in a schema called
