@@ -49,7 +49,7 @@
             <content/>
           </object>
           <object class="wxStaticText" name="stDatabase">
-            <label>Initial DB</label>
+            <label>Maintenance DB</label>
             <pos>5,67d</pos>
           </object>
           <object class="wxComboBox" name="cbDatabase">
